Reflow main content before reflowing fixed-pos frames so that the placeholders are in the right places.  Bug 90270 and dependencies.  r+sr=roc+moz